@@ -511,6 +511,26 @@ if errorlevel 1 exit /b 1
 echo ======================================== syntax-rules stress test ...
 %interpret% -bnq syntax-rule-stress-test.scm
 
+echo "======================================== include test ..."
+mkdir a\b
+echo > a\b\ok.scm
+echo '(include "a/b/ok.scm")' > a\b\include.scm
+%compile% -analyze-only a\b\include.scm
+if errorlevel 1 exit /b 1
+echo '(include "b/ok.scm")' > a\b\include.scm
+%compile% -analyze-only a\b\include.scm -include-path a
+if errorlevel 1 exit /b 1
+echo '(include-relative "ok.scm")' > a\b\include.scm
+%compile% -analyze-only a\b\include.scm
+if errorlevel 1 exit /b 1
+echo '(include-relative "b/ok.scm")' > a\include.scm
+%compile% -analyze-only a\include.scm
+if errorlevel 1 exit /b 1
+echo '(include-relative "b/ok.scm")' > a\b\include.scm
+%compile% -analyze-only a\b\include.scm -include-path a
+if errorlevel 1 exit /b 1
+del /f /s /q a
+
 echo "======================================== executable tests ..."
 %compile% executable-tests.scm
 if errorlevel 1 exit /b 1
